test/types/partial/partialTypeFormal.error.good
partialTypeFormal.chpl:13: In function 'main':
partialTypeFormal.chpl:19: error: unresolved call 'foo(type R, R(real(64),5))'
partialTypeFormal.chpl:9: note: this candidate did not match: foo(type T, x: T(int))
partialTypeFormal.chpl:19: note: because call actual argument #2 with type R(real(64),5)
partialTypeFormal.chpl:9: note: is passed to formal 'x: R(int(64))'
